# decode_embedded

./: .gdbinit  .gdbinit2  Cargo.toml  README.md
.cargo/: config
src/: main.rs
