[package]
authors = ["Viktor Fällman"]
categories = ["embedded", "no-std"]
description = "Decode a string example from course implemented on a Nucleo64 board"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "decode_embedded"
repository = "https://github.com/superspindel/decode_embedded"
version = "0.1.0"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.stm32f40x]
features = ["rt"] # see comment above
git = "https://gitlab.henriktjader.com/pln/STM32F40x"

[profile.release]
debug = true
lto = true
