[package]
authors = ["Viktor Fällman"]
categories = ["embedded", "no-std"]
description = "Decode a string example from course implemented on a Nucleo64 board"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "decode_embedded"
repository = "https://github.com/superspindel/decode_embedded"
version = "0.1.0"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.stm32f103xx]
features = ["rt"] # this feature indicates that the device crate will provide the vector table
version = "0.7.5"

[profile.release]
debug = true
lto = true
